syntax = "proto3";

option go_package = "github.com/mcculleydj/currency-trader/exchange/pkg/proto";

package exchange;

message RateRequest {
  // base currency
  string base = 1;
  // quote currency
  string quote = 2;
}

message RatesRequest {
  string currency = 1;
}

message ExchangeRate {
  // timestamp this rate was fetched
  int64 timestamp = 1;
  // base currency
  string base = 2;
  // quote currency
  string quote = 3;
  // amount of quote currency required to purchase 1 unit of base currency
  double rate = 4;
}

message ExchangeRates {
  // effective date (useful for historical data)
  string date = 1;
  // list of rates
  repeated ExchangeRate rates = 2;
}

service Exchange {
  // current exchange rate given any two supported currencies
  rpc GetRate(RateRequest) returns (ExchangeRate);
  // list of current exchange rates for base currency
  rpc GetRates(RatesRequest) returns (ExchangeRates);
  // will use stream for practice
  rpc GetHistoricalRates(RatesRequest) returns (stream ExchangeRates);
}
